--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,3 @@
-#IDE files
-.vscode
-*.vcxproj
-*.vcxproj.*
-*.sln
-
-#CMake Files
-*.cmake
-CMakeCache.txt
-CMakeFiles
-
-#build files and folders
-build
-bin
-
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+# IDE folders and files
+.idea
+.vs
