--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 .idea
 .vs
 .vscode
+*.sln
+*.vcxproj
+*.vcxproj.filters
 
-# Build folders
+# Build folders and files
 build
+CMakeFiles
+cmake_install.cmake
+CMakeCache.txt
+
