--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 *.sln
 *.vcxproj
 *.vcxproj.filters
+*.vcxproj.user
+*.dir
+
 
 # Build folders and files
 build
@@ -13,4 +16,7 @@ cmake_install.cmake
 CMakeCache.txt
 out
 cmake-build-debug
-
+Debug
+x64
+Release
+RelWithDebInfo
