--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,16 @@ cmake_minimum_required(VERSION 3.14)
 
 project(DX_Renderer VERSION 0.0.1)
 
-add_executable(${CMAKE_PROJECT_NAME} WIN32 src/main.cpp)
+set(warnings "/W4 /WX /EHsc")
 
-# Linking with D3D12 components
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE "d3d12.lib" "dxgi.lib" "d3dcompiler.lib")
+file(GLOB_RECURSE  SRCS
+        "DX_Renderer/*.cpp"
+        "DX_Renderer/*.hpp")
+
+add_compile_definitions(WIN32_LEAN_AND_MEAN)
+
+add_executable(${CMAKE_PROJECT_NAME} WIN32 DX_Renderer/main.cpp ${SRCS})
+
+set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY CXX_STANDARD 17)
+
+target_link_libraries(DX_Renderer PRIVATE "d3d12.lib" "dxgi.lib" "d3dcompiler.lib")
