--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(DX_Renderer VERSION 0.0.1)
 
 set(warnings "/W4 /WX /EHsc")
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd26812")
+
 file(GLOB_RECURSE  SRCS
         "DX_Renderer/*.cpp"
         "DX_Renderer/*.hpp")
