--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(DX_Renderer VERSION 0.0.1)
 set(warnings "/W4 /WX /EHsc")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd26812")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
 
 file(GLOB_RECURSE  SRCS
         "DX_Renderer/*.cpp"
