--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,9 @@ add_executable(${CMAKE_PROJECT_NAME} WIN32 DX_Renderer/main.cpp ${SRCS})
 
 set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY CXX_STANDARD 17)
 
-target_link_libraries(DX_Renderer PRIVATE "d3d12.lib" "dxgi.lib" "d3dcompiler.lib" "windowscodecs.lib")
+target_link_libraries(DX_Renderer PRIVATE 
+        "d3d12.lib" 
+        "dxgi.lib" 
+        "d3dcompiler.lib" 
+        "windowscodecs.lib"
+        "dxcompiler.lib")
