--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(DX_Renderer VERSION 0.0.1)
 set(warnings "/W4 /WX /EHsc")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd26812")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
 
 file(GLOB_RECURSE  SRCS
         "DX_Renderer/*.cpp"
@@ -17,4 +18,4 @@ add_executable(${CMAKE_PROJECT_NAME} WIN32 DX_Renderer/main.cpp ${SRCS})
 
 set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY CXX_STANDARD 17)
 
-target_link_libraries(DX_Renderer PRIVATE "d3d12.lib" "dxgi.lib" "d3dcompiler.lib")
+target_link_libraries(DX_Renderer PRIVATE "d3d12.lib" "dxgi.lib" "d3dcompiler.lib" "windowscodecs.lib")
