--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,8 @@ target_link_libraries(DX_Renderer PRIVATE
         "dxgi.lib" 
         "d3dcompiler.lib" 
         "windowscodecs.lib"
-        "dxcompiler.lib")
+        "dxcompiler.lib"
+		"DX_Renderer/ThirdParty/VXGI/GFSDK_VXGI_x64.lib")
 		
 add_custom_command(
 	TARGET DX_Renderer PRE_BUILD #Adds a post-build event
@@ -35,4 +36,10 @@ add_custom_command(
 	TARGET DX_Renderer PRE_BUILD #Adds a post-build event
 	COMMAND ${CMAKE_COMMAND} -E copy_if_different
 	"${PROJECT_SOURCE_DIR}/DX_Renderer/ThirdParty/DXC/dxil.dll"
+	$<TARGET_FILE_DIR:DX_Renderer>) 
+	
+add_custom_command(
+	TARGET DX_Renderer PRE_BUILD #Adds a post-build event
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different
+	"${PROJECT_SOURCE_DIR}/DX_Renderer/ThirdParty/VXGI/GFSDK_VXGI_x64.dll"
 	$<TARGET_FILE_DIR:DX_Renderer>) 
