--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(DX_Renderer VERSION 0.0.1)
 set(warnings "/W4 /WX /EHsc")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd26812")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /nologo /Oi")
 
 file(GLOB_RECURSE  SRCS
         "DX_Renderer/*.cpp"
@@ -18,10 +18,10 @@ add_executable(${CMAKE_PROJECT_NAME} WIN32 DX_Renderer/main.cpp ${SRCS})
 
 set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY CXX_STANDARD 17)
 
-target_link_libraries(DX_Renderer PRIVATE 
-        "d3d12.lib" 
-        "dxgi.lib" 
-        "d3dcompiler.lib" 
+target_link_libraries(DX_Renderer PRIVATE
+        "d3d12.lib"
+        "dxgi.lib"
+        "d3dcompiler.lib"
         "windowscodecs.lib"
         "dxcompiler.lib"
 		"./DX_Renderer/ThirdParty/VXGI/GFSDK_VXGI_x64"
@@ -37,10 +37,10 @@ add_custom_command(
 	TARGET DX_Renderer PRE_BUILD #Adds a post-build event
 	COMMAND ${CMAKE_COMMAND} -E copy_if_different
 	"${PROJECT_SOURCE_DIR}/DX_Renderer/ThirdParty/DXC/dxil.dll"
-	$<TARGET_FILE_DIR:DX_Renderer>) 
+	$<TARGET_FILE_DIR:DX_Renderer>)
 	
 add_custom_command(
 	TARGET DX_Renderer PRE_BUILD #Adds a post-build event
 	COMMAND ${CMAKE_COMMAND} -E copy_if_different
 	"${PROJECT_SOURCE_DIR}/DX_Renderer/ThirdParty/VXGI/GFSDK_VXGI_x64.dll"
-	$<TARGET_FILE_DIR:DX_Renderer>) 
+	$<TARGET_FILE_DIR:DX_Renderer>)
