Revert "added nvapi for the performance intrumentator"
This reverts commit b5d9461b5a5ca362ee31eb0cc7ef519dd531ca43.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ target_link_libraries(DX_Renderer PRIVATE
         "d3dcompiler.lib"
         "windowscodecs.lib"
         "dxcompiler.lib"
+		"./DX_Renderer/ThirdParty/VXGI/GFSDK_VXGI_x64"
 		"./DX_Renderer/ThirdParty/NVAPI/nvapi64")
 		
 add_custom_command(
@@ -36,4 +37,10 @@ add_custom_command(
 	TARGET DX_Renderer PRE_BUILD #Adds a post-build event
 	COMMAND ${CMAKE_COMMAND} -E copy_if_different
 	"${PROJECT_SOURCE_DIR}/DX_Renderer/ThirdParty/DXC/dxil.dll"
+	$<TARGET_FILE_DIR:DX_Renderer>)
+	
+add_custom_command(
+	TARGET DX_Renderer PRE_BUILD #Adds a post-build event
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different
+	"${PROJECT_SOURCE_DIR}/DX_Renderer/ThirdParty/VXGI/GFSDK_VXGI_x64.dll"
 	$<TARGET_FILE_DIR:DX_Renderer>)
